# p2p_scanner

./: README.md
backend/: pyproject.toml  requirements.txt  scanner.db
backend/app/: 1  config.py  db.py  main.py  models.py  scoring.py
backend/app/connectors/: base.py  kalshi.py  mock.py
backend/app/jobs/: poller.py
backend/scripts/: generate_site.py  old_generate_site.py  print_politics_markets.py
